[package]
name = "image-chooser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
csv = "1.4.0"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["image", "tokio"] }
image = { version = "0.25.10", features = ["jpeg", "png"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
